bg img fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -117,16 +117,13 @@
 .paralax {
   position: relative;
   background-image: url('../img/snowmount.jpg');
-  height: 100vh;
+  height: auto;
   max-width: 1800px;
   margin: 0 auto;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-background-size: cover; 
-  -moz-background-size: cover; 
-  -o-background-size: cover; 
 }
 
 .gradient {
@@ -160,6 +157,13 @@
   position: absolute;
   top: 50%; left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@media all and (min-width: 768px) {
+  .paralax {
+    height: 100vh;
+    background-attachment: fixed;
+  }
 }
 
 /* tiles & overlays */
